--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^9",
-    "express": "^4"
+    "express": "^4",
+    "@cap-js/hana": "^2"
   },
   "engines": {
     "node": ">=20"
@@ -23,5 +24,6 @@
   "sapux": [
     "app/managepurchaseorder",
     "app/managepurchaseorders"
-  ]
+  ],
+  "cds": {}
 }
