--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "dependencies": {
     "@sap/cds": "^9",
     "express": "^4",
-    "@cap-js/hana": "^2"
+    "@cap-js/hana": "^2",
+    "@sap/xssec": "^4"
   },
   "engines": {
     "node": ">=20"
   },
   "devDependencies": {
+    "@cap-js/cds-types": "^0.11.0",
     "@cap-js/sqlite": "^2",
-    "@cap-js/cds-types": "^0.11.0"
+    "@sap/cds-dk": ">=8"
   },
   "scripts": {
     "start": "cds-serve",
@@ -25,5 +27,11 @@
     "app/managepurchaseorder",
     "app/managepurchaseorders"
   ],
-  "cds": {}
+  "cds": {
+    "requires": {
+      "[production]": {
+        "auth": "xsuaa"
+      }
+    }
+  }
 }
