--- a/mta.yaml
+++ b/mta.yaml
@@ -26,6 +26,24 @@ modules:
     requires:
       - name: mycapm-db
       - name: mycapm-auth
+  - name: mycapm-ui
+    type: nodejs
+    path: app
+    parameters:
+      instances: 1
+      buildpack: nodejs_buildpack
+    build-parameters:
+      builder: npm-ci
+ 
+    requires:
+      - name: srv-api
+        group: destinations
+        properties:
+          name: srv-api
+          strictSSL: true
+          forwardAuthToken: true
+          url: '~{srv-url}'
+      - name: mycapm-auth
 
   - name: mycapm-db-deployer
     type: hdb
